--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@
                 'paint': {
                   'circle-radius': 5,
                   'circle-color': "blue"
+                  'text-field': ['get', 'name'],
+                  'text-font': [
+                  'Open Sans Semibold',
+                  'Arial Unicode MS Bold'
+                  ],
+                  'text-offset': [0, 1.25],
+                  'text-anchor': 'top'
                 }
               });
 
