--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               },
               'layout': {
                 // get the title name from the source's "name" property
-                'text-field': ['get', 'descriptionName'],
+                'text-field': ['get', features.properties.Name],
                 'text-font': [
                   'Open Sans Semibold',
                   'Arial Unicode MS Bold'
