--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 
             //Add the the layer to the map
-          /*  map.addLayer({
+            map.addLayer({
               'id': 'csvData',
               'type': 'circle',
               'source': {
@@ -136,7 +136,7 @@
               },
               'layout': {
                 // get the title name from the source's "title" property
-                'text-field': ['get', 'title'],
+                'text-field': ['get', features.properties.Name],
                 'text-font': [
                 'Open Sans Semibold',
                 'Arial Unicode MS Bold'
@@ -148,9 +148,9 @@
                 'circle-radius': 6,
                 'circle-color': "black"
               }
-            });*/
-
-            map.addLayer({
+            });
+/*
+            // map.addLayer({
               'id': 'csvData',
               'type': 'circle',
               'source': {
@@ -167,7 +167,7 @@
                 'text-offset': [0, 1.25],
                 'text-anchor': 'top'
               }
-            });
+            // });*/
 
 
             // When a click event occurs on a feature in the csvData layer, open a popup at the
