--- a/index.html
+++ b/index.html
@@ -121,10 +121,9 @@
         }, function (err, data) {
           map.on('load', function () {
 
-            var featuresData = data.features;
             const testNavn = "TestNavn";
             
-            console.log(featuresData, 'data')
+            console.log(data, 'data')
             
           //  var descriptionName = e.features[0].properties.Name;
 
