--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                 'data': data
               },
               'paint': {
-                'circle-radius': 6,
-                'circle-color': "white";
+                'circle-radius': 5,
+                'circle-color': "black"
               }
             });
 
