--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               },
               'paint': {
                 'circle-radius': 5,
-                'circle-color': "black"
+                'circle-color': rgb(61, 59, 59)
               }
             });
 
