--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     }
 
     .mapboxgl-popup-anchor-top>.mapboxgl-popup-tip {
-      border-bottom-color: rgb(0, 113, 187);
+      border-bottom-color: rgb(61, 59, 59);
     }
   </style>
 </head>
@@ -129,8 +129,8 @@
                 'data': data
               },
               'paint': {
-                'circle-radius': 5,
-                'circle-color': rgb(0, 113, 187)
+                'circle-radius': 6,
+                'circle-color': "black"
               }
             });
 
