--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                 'data': data
               },
               'paint': {
-                'circle-radius': 12,
-                'circle-color': "blue"
+                'circle-radius': 4,
+                'circle-color': rgb(0, 113, 187)
               }
             });
 
