--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               },
               'paint': {
                 'circle-radius': 4,
-                'circle-color': rgb(0, 113, 187)
+                'circle-color': black
               }
             });
 
