--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     }
 
     .mapboxgl-popup-anchor-top>.mapboxgl-popup-tip {
-      border-bottom-color: rgb(0, 113, 187);
+      border-bottom-color: rgb(61, 59, 59);
     }
   </style>
 </head>
@@ -129,8 +129,8 @@
                 'data': data
               },
               'paint': {
-                'circle-radius': 14,
-                'circle-color': black
+                'circle-radius': 6,
+                'circle-color': "black"
               }
             });
 
@@ -143,7 +143,7 @@
               //set popup text
               //You can adjust the values of the popup to match the headers of your CSV.
               // For example: e.features[0].properties.Name is retrieving information from the field Name in the original CSV.
-            var description = `<h3>` + e.features[0].properties.Name + `</h3>` + `<h4>` + `<b>` + `Beskrivelse: ` + `</b>` + e.features[0].properties.Description + `</h4>` + `<h4>` + `<b>` + `Adresse ` + `</b>` + e.features[0].properties.Address_1 + `</h4>`;
+              var description = `<h3>` + e.features[0].properties.Name + `</h3>` + `<h4>` + `<b>` + `Address: ` + `</b>` + e.features[0].properties.Address + `</h4>` + `<h4>` + `<b>` + `Phone: ` + `</b>` + e.features[0].properties.Phone + `</h4>`;
 
               // Ensure that if the map is zoomed out such that multiple
               // copies of the feature are visible, the popup appears
