--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     }
 
     .mapboxgl-popup-anchor-top>.mapboxgl-popup-tip {
-      border-bottom-color: rgb(61, 59, 59);
+      border-bottom-color: rgb(0, 113, 187);
     }
   </style>
 </head>
@@ -130,7 +130,7 @@
               },
               'paint': {
                 'circle-radius': 6,
-                'circle-color': "black"
+                'circle-color': rgb(0, 113, 187)
               }
             });
 
