--- a/index.html
+++ b/index.html
@@ -129,8 +129,10 @@
                 'data': data
               },
               'paint': {
-                'circle-radius': 3,
-                'circle-color': "white"
+                'circle-radius': 4,
+                'circle-color': "white",
+                'circle-stroke-color': "black",
+                'circle-stroke-width': 1
               }
             });
 
