--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               //set popup text
               //You can adjust the values of the popup to match the headers of your CSV.
               // For example: e.features[0].properties.Name is retrieving information from the field Name in the original CSV.
-              var description = `<h3>` + e.features[0].properties.Name + `</h3>` + `<h4>` + `<b>` + `Beskrivelse: ` + `</b>` + '<br>' + e.features[0].properties.Description + `</h4>` + `</b>` + `<h4>` + `<a href="https://kartograf.dk/" target="_blank">Hjemmeside</a>` + '<br>' + '<br>' + e.features[0].properties.Addresse + '<br>' + e.features[0].properties.By + `</h4>`;
+              var description = `<h3>` + e.features[0].properties.Name + `</h3>` + `<h4>` + `<b>` + `Beskrivelse: ` + `</b>` + '<br>' + e.features[0].properties.Description + `</h4>` + `</b>` + `<h4>` + `<a href="https://kartograf.dk/" target="_blank" rel="noopener noreferrer">Hjemmeside</a>` + '<br>' + '<br>' + e.features[0].properties.Addresse + '<br>' + e.features[0].properties.By + `</h4>`;
               // Ensure that if the map is zoomed out such that multiple
               // copies of the feature are visible, the popup appears
               // over the copy being pointed to.
