--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
                 'circle-stroke-color': "black",
                 'circle-stroke-width': 1
               }
+              },
+              'road-label-simple'
+              );
             });
 
 
