--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       $.ajax({
         type: "GET",
         //YOUR TURN: Replace with csv export link
-        url: 'https://docs.google.com/spreadsheets/d/1mBN2iR6zk6F2vd-TgAXWOQocrjyqvNlIb-ARCTiwMTc/gviz/tq?tqx=out:csv&sheet=sheet1',
+        url: 'https://docs.google.com/spreadsheets/d/17PjEGCdvE93PIncxWH7TQ8amxQpUOhblBkB5oDYlPqo/gviz/tq?tqx=out:csv&sheet=Sheet1',
         dataType: "text",
         success: function (csvData) { makeGeoJSON(csvData); }
       });
