--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
                 'data': data
               },
               'paint': {
-                'circle-radius': 6,
-                'circle-color': "blue",
-                'circle-stroke-color': "white",
-                'circle-stroke-width': 2
+                'circle-radius': 4,
+                'circle-color': "white",
+                'circle-stroke-color': "black",
+                'circle-stroke-width': 1
               }
             });
 
@@ -145,7 +145,7 @@
               //set popup text
               //You can adjust the values of the popup to match the headers of your CSV.
               // For example: e.features[0].properties.Name is retrieving information from the field Name in the original CSV.
-              var description = `<h3>` + e.features[0].properties.Name + `</h3>` + `<h4>` + `<b>` + `Beskrivelse: ` + `</b>` + '<br>' + e.features[0].properties.Description + `</h4>` + `</b>` + `<h4>` + e.features[0].properties.Web + '<br>' + '<br>' + e.features[0].properties.Addresse + '<br>' + e.features[0].properties.By + `</h4>`;
+              var description = `<h3>` + e.features[0].properties.Name + `</h3>` + `<h4>` + `<b>` + `Beskrivelse: ` + `</b>` + '<br>' + e.features[0].properties.Description + `</h4>` + `</b>` + `<h4>` + window.open( 'e.features[0].properties.Web', '_blank') + '<br>' + '<br>' + e.features[0].properties.Addresse + '<br>' + e.features[0].properties.By + `</h4>`;
               // Ensure that if the map is zoomed out such that multiple
               // copies of the feature are visible, the popup appears
               // over the copy being pointed to.
