--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
                 'data': data
               },
               'paint': {
-                'circle-radius': 4,
+                'circle-radius': 6,
                 'circle-color': "white",
-                'circle-stroke-color': "black",
-                'circle-stroke-width': 1
+                'circle-stroke-color': "blue",
+                'circle-stroke-width': 2
               }
             });
 
