--- a/index.html
+++ b/index.html
@@ -134,6 +134,23 @@
                 'circle-stroke-color': "blue",
                 'circle-stroke-width': 2
               }
+
+              map.addLayer({
+                'id': 'csvData',
+                'type': 'symbol',
+                'source': {
+                  'type': 'geojson',
+                  'data': data
+                },
+                'layout': {
+              'text-field': [e.features[0].properties.Name],
+              'text-font': [
+              'Open Sans Semibold',
+              'Arial Unicode MS Bold'
+              ],
+              'text-offset': [0, 1.25],
+              'text-anchor': 'top'
+              }
             });
 
 
