--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     var map = new mapboxgl.Map({
       container: 'map', // container id
       style: 'mapbox://styles/holm-h/ckhepdodv0w8d19kvz7iy34ah', // YOUR TURN: choose a style: https://docs.mapbox.com/api/maps/#styles
+      'attribution': 'HH Karto'
       center: [11.656, 55.916], // starting position [lng, lat]
       zoom: 11,// starting zoom
       transformRequest: transformRequest
