--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
     //YOUR TURN: add your Mapbox token
 
     mapboxgl.accessToken = 'pk.eyJ1IjoiaG9sbS1oIiwiYSI6ImNrZzZmOHg5ajEzenUycW16ZzJma2ZtZjAifQ.rvQ9FAsNyzQUFYxBwXIsXA'; //Mapbox token
-    var map = new mapboxgl.Map({
+    var map = new mapboxgl.Map({attributionControl: false})
+    .addControl(new mapboxgl.AttributionControl({
+    customAttribution: 'Map design by me'
       container: 'map', // container id
       style: 'mapbox://styles/holm-h/ckhepdodv0w8d19kvz7iy34ah', // YOUR TURN: choose a style: https://docs.mapbox.com/api/maps/#styles
       center: [11.656, 55.916], // starting position [lng, lat]
