--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     //YOUR TURN: add your Mapbox token
 
     mapboxgl.accessToken = 'pk.eyJ1IjoiaG9sbS1oIiwiYSI6ImNrZzZmOHg5ajEzenUycW16ZzJma2ZtZjAifQ.rvQ9FAsNyzQUFYxBwXIsXA'; //Mapbox token
-    var map = new mapboxgl.Map({attributionControl: false})
+    var map = new mapboxgl.Map({attributionControl: true})
     .addControl(new mapboxgl.AttributionControl({
     customAttribution: 'Map design by me'
       container: 'map', // container id
