--- a/index.html
+++ b/index.html
@@ -93,20 +93,18 @@
     //YOUR TURN: add your Mapbox token
 
     mapboxgl.accessToken = 'pk.eyJ1IjoiaG9sbS1oIiwiYSI6ImNrZzZmOHg5ajEzenUycW16ZzJma2ZtZjAifQ.rvQ9FAsNyzQUFYxBwXIsXA'; //Mapbox token
-    var map = new mapboxgl.Map({attributionControl: false}) //det her virker ikke - heller ikke med 'true'
-    .addControl(new mapboxgl.AttributionControl({
-    customAttribution: 'Map design by me'
+    var map = new mapboxgl.Map({
       container: 'map', // container id
       style: 'mapbox://styles/holm-h/ckhepdodv0w8d19kvz7iy34ah', // YOUR TURN: choose a style: https://docs.mapbox.com/api/maps/#styles
       center: [11.656, 55.916], // starting position [lng, lat]
       zoom: 11,// starting zoom
-transformRequest: transformRequest
+      transformRequest: transformRequest,
+      attributionControl: false,
     });
+    map.addControl(new mapboxgl.AttributionControl({
+	customAttribution: 'Fozzis zyge maps'
+    }));
 
-          map.addControl(new mapboxgl.AttributionControl({
-customAttribution: 'Fozzis zyge map!'
-}));
-    
     $(document).ready(function () {
       $.ajax({
         type: "GET",
