--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       attributionControl: false,
     });
     map.addControl(new mapboxgl.AttributionControl({
-	customAttribution: 'Kortdesign: Kartograf.dk / Data fra: SDFE og Danske Kommuner: Skel, DHM-2015, kurver 0.5 m. FOT: bykerne'
+	customAttribution: 'Kortdesign: <a href="https://kartograf.dk/" target="_blank" title="Åbner i nyt vindue">Kartograf.dk</a> / Data fra: SDFE og Danske Kommuner: Skel, DHM-2015, kurver 0.5 m. FOT: bykerne'
     }));
 
     $(document).ready(function () {
