--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       attributionControl: false,
     });
     map.addControl(new mapboxgl.AttributionControl({
-	customAttribution: 'Kortdesign: <a href="https://kartograf.dk/" target="_blank" title="Åbner i nyt vindue"><b>Kartograf.dk</b></a> / Geodata: <a href="https://sdfi.dk/" target="_blank" title="Åbner i nyt vindue"><b>SDFE</b></a> og Danske Kommuner: Inspire, Cadastralparcel, skel, Dec 2022 / DHM-2015, kurver 0.5 m. / GeoDanmark: bykerne'
+	customAttribution: 'Kortdesign: <a href="https://kartograf.dk/" target="_blank" title="Åbner i nyt vindue"><b>Kartograf.dk</b></a> / Geodata: ©<a href="https://sdfi.dk/" target="_blank" title="Åbner i nyt vindue"><b>SDFE</b></a> og Danske Kommuner: Inspire, Cadastralparcel, skel, Dec 2022 / DHM-2015, kurver 0.5 m. / GeoDanmark: bykerne'
     }));
 
     $(document).ready(function () {
